# Beaver

./: .gitignore  README.md  pyproject.toml  requirements.txt
beaver/: __init__.py  api.py  batch_runner.py  cli.py  logging.py  server.py
beaver/configs/models/: default.yaml
beaver/constraints/: base_constraints.py  semantic_constraint_cache.py
beaver/grammars/: c_grammar.lark  go_grammar.lark  gsm_grammar.lark  python_grammar.lark  rust_grammar.lark
beaver/utils/: compare_logs.py  make_leaderboard.py  show_cache_stats.py
beaver/verifiers/: __init__.py  base_verifier.py  frontier.py  frontier_verifier.py  llguidance_grammar.py  sampling_verifier.py  worker_common.py
configs/batches/: example_batch.yaml  models_baseline.yaml  models_leaderboard.yaml  new_leaderboard.yaml  secure_code.yaml  stereotype_experiments.yaml  toxicity_experiments.yaml
experiments/enron/: enron.py  enron.yaml  enron_baseline.yaml
experiments/gsm_symbolic/: gsm_symbolic.py  gsm_symbolic.yaml  gsm_symbolic_baseline.yaml  gsm_symbolic_template.yaml
experiments/hallucination/: hallucination.py  hallucination.yaml
experiments/secure_code/: secure_code.py  secure_code.yaml  secure_code_baseline.yaml  secure_code_jailbreak.yaml  secure_code_jailbreak_baseline.yaml
experiments/secure_code/data/: prompt_prefix_autocomplete.txt  prompt_prefix_instruct.txt  spl_jailbreak.txt
experiments/stereotype/: stereotype.py  stereotype.yaml  stereotype_baseline.yaml
experiments/toxicity/: launch_detoxify_server.py  toxicity.py  toxicity.yaml  toxicity_baseline.yaml
(+2 files in other folders)
